# top200-rs

./: .cursorrules  .env.example  .gitignore  .windsurfrules  CLAUDE.md  Cargo.lock.license  Cargo.toml  README.md  REUSE.toml  build_rs_cov.profraw  cobertura.xml  codecov.yml  config.toml  data.db  deny.toml  flake.lock.license  flake.nix  global_rules.md  init.md  openhands.sh  result  rustfmt.toml  top200.db
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.githooks/: pre-commit
.github/: dependabot.yml
.reuse/: dep5
.sqlx/: query-339a30e02ca1e89598dfcb961d8cf3a1a466a6c23ab6b6da3a6a7f4e06caf040.json  query-41f4b457d038c905ff7b56a2fbefd8496064af8b3af5d8b563d3c8577a272928.json  query-7389c65df275aa42f832cb18634f19e81ea513d44e8cb85afc66631bc7dcc63c.json  query-b093cc66b8ff68141997e9b349c628250a6ab0c0d143b8a76da50c0d8baba036.json  query-d1161c1de4ad3634418a075897733b7ec474f239903452d9d5c1946111116ae6.json  query-f51e2971492b5db08a63e1fa9e5ac5df67e60cc25cb196cefb6fde24d0803234.json
data/: top100_from_website.json
docs/: brevo-transactionalemail-api-docs.md  build.md  migrate-sqlx-to-diesel.md
migrations/: 20230101000001_create_currencies_table.sql  20250108000000_create_currencies.sql  20250108000001_create_forex_rates.sql  20250108000002_create_market_caps.sql  20250108181156_init.sql  20250109_init.sql  20250123_init.sql  20250124123300_create_ticker_details.sql  20250817140000_create_symbol_changes.sql  V1__create_initial_tables.sql  V2__create_currencies_table.sql  V3__create_forex_rates_table.sql  V4__create_market_caps_table.sql  V5__add_price_to_market_caps.sql
output/: combined_marketcaps_20241205_153153.csv  combined_marketcaps_20241205_153843.csv  combined_marketcaps_20241205_154058.csv  (+96 more)
(+54 files in other folders)
