[package]
name = "top200-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dotenv = "0.15.0"
inquire = "0.6.2"
anyhow = "1.0.79"
chrono = "0.4.31"
csv = "1.3.0"
ratatui = "0.24.0"
crossterm = "0.27.0"
plotters = "0.3.7"
confy = "0.5.1"
toml = "0.8.8"
indicatif = "0.17"
futures = "0.3"
