[package]
name = "top200-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
dotenv = "0.15.0"
anyhow = "1.0.79"
chrono = "0.4.31"
csv = "1.3.0"
plotters = "0.3.7"
confy = "0.5.1"
toml = "0.8.8"
indicatif = "0.17"
futures = "0.3"
clap = { version = "4.4.12", features = ["derive"] }
glob = "0.3.1"

[dev-dependencies]
tempfile = "3.8.1"
approx = "0.5.1"
