# SPDX-FileCopyrightText: 2025 Joost van der Laan <joost@fashionunited.com>
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "top200-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
dotenvy = "0.15.7"
anyhow = "1.0.79"
chrono = "0.4.34"
csv = "1.3.0"
plotters = "0.3.5"
confy = "0.5.1"
toml = "0.8.8"
indicatif = "0.17.8"
futures = "0.3"
clap = { version = "4.5.1", features = ["derive"] }
glob = "0.3.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "any"] }
mockall = "0.12.1"
async-trait = "0.1.77"

[dev-dependencies]
tempfile = "3.8.1"
approx = "0.5.1"
